--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit>=1.25.0
 yfinance
 pandas
 plotly
@@ -8,3 +8,7 @@ pytrends
 transformers
 feedparser
 torch
+streamlit-option-menu
+streamlit-extras
+streamlit-lottie
+lxml
